--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,8 @@ services:
       - '/usr/etc/turtlenode/variables.env'
     volumes:
       - turtlenode:/home/turtlecoin/
-
+    ports:
+      - ${P2P_BIND_PORT}:${P2P_BIND_PORT}
+      - ${RPC_BIND_PORT}:${RPC_BIND_PORT}
+      - ${TTYD_BIND_PORT}:${TTYD_BIND_PORT}
+  
