--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 
 services:
-  mosquitto:
+  turtlenode:
     image: bisand/turtlenode:latest
     restart: always
     container_name: turtlenode
