--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,6 @@ services:
       - ${TTYD_BIND_PORT}:${TTYD_BIND_PORT}
     volumes:
       - turtlenode:/home/turtlecoin/
+
+  volumes:
+    turtlenode:
