added .data to gitignore

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,9 @@ services:
 
 volumes:
   turtlenode:
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: './.data'
+
